fix z-index

--- a/src/css/LandingPage/LandingPage.css
+++ b/src/css/LandingPage/LandingPage.css
@@ -81,6 +81,7 @@
     width: 600px;
     height: 400px;
     border: 1px solid black;
+    z-index: 1;
 }
 /*start to play*/
 .LandingPage-StartPlay{
@@ -173,7 +174,7 @@
     position: fixed;
     bottom: 20px;
     right: 30px;
-    z-index: 99;
+    z-index: 100;
     font-size: 30px;
     border: none;
     outline: none;
